changed z-index to ensure the popup is infront of the close symbol

--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ a:active {
 .fa-times-circle {
     float: right;
     cursor: pointer;
-    z-index: 0;
+    z-index: 2; /* Might want to change this if in the future..*/
 }
 
 .name {
